--- a/index.html
+++ b/index.html
@@ -5,7 +5,173 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>World Cup 2022</title>
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/ed41977d60.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- header part start -->
+    <header>
+      <div class="header-item container">
+        <div class="header-left common-width">
+          <div class="video__icon">
+            <div class="circle--outer"></div>
+            <div class="circle--inner"></div>
+            <p>LIVE</p>
+          </div>
+          <h1>FIFA World Cup Qatar 2022™</h1>
+          <p>
+            We advise football fans to place their application as soon as the
+            sales period opens.
+          </p>
+          <a class="btn" href=""
+            >TICKETS <i class="fas fa-solid fa-angles-right"></i
+          ></a>
+        </div>
+        <div class="header-right common-width">
+          <img src="images/Banner Image.png" alt="" />
+        </div>
+      </div>
+    </header>
+    <!-- header part end -->
+    <!-- main part start -->
+    <main>
+      <div class="match-part">
+        <div class="container main mt-100">
+          <div class="main-left">
+            <div class="match-update">
+              <ul>
+                <li><a href="match.html">Upcoming Match</a></li>
+                <li><a href="">All Group</a></li>
+                <li><a id="active" href="">Blog</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="matches main-right">
+            <article class="match">
+              <img src="images/Blog Image.png" alt="" />
+              <div class="match-info">
+                <a href="">Transfer</a>
+                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                <div class="match-desc">
+                  <div class="watch-duration">
+                    <i class="fa-solid fa-clock"></i> 10h
+                  </div>
+                  <div class="comment">
+                    <i class="fa-solid fa-message"></i> 23
+                  </div>
+                </div>
+              </div>
+            </article>
+            <article class="match">
+              <img src="images/Blog Image.png" alt="" />
+              <div class="match-info">
+                <a href="">Transfer</a>
+                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                <div class="match-desc">
+                  <div class="watch-duration">
+                    <i class="fa-solid fa-clock"></i> 10h
+                  </div>
+                  <div class="comment">
+                    <i class="fa-solid fa-message"></i> 23
+                  </div>
+                </div>
+              </div>
+            </article>
+            <article class="match">
+              <img src="images/Blog Image.png" alt="" />
+              <div class="match-info">
+                <a href="">Transfer</a>
+                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                <div class="match-desc">
+                  <div class="watch-duration">
+                    <i class="fa-solid fa-clock"></i> 10h
+                  </div>
+                  <div class="comment">
+                    <i class="fa-solid fa-message"></i> 23
+                  </div>
+                </div>
+              </div>
+            </article>
+            <article class="match">
+              <img src="images/Blog Image.png" alt="" />
+              <div class="match-info">
+                <a href="">Transfer</a>
+                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                <div class="match-desc">
+                  <div class="watch-duration">
+                    <i class="fa-solid fa-clock"></i> 10h
+                  </div>
+                  <div class="comment">
+                    <i class="fa-solid fa-message"></i> 23
+                  </div>
+                </div>
+              </div>
+            </article>
+            <article class="match">
+              <img src="images/Blog Image.png" alt="" />
+              <div class="match-info">
+                <a href="">Transfer</a>
+                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                <div class="match-desc">
+                  <div class="watch-duration">
+                    <i class="fa-solid fa-clock"></i> 10h
+                  </div>
+                  <div class="comment">
+                    <i class="fa-solid fa-message"></i> 23
+                  </div>
+                </div>
+              </div>
+            </article>
+            <article class="match">
+              <img src="images/Blog Image.png" alt="" />
+              <div class="match-info">
+                <a href="">Transfer</a>
+                <p>Transfer Live: Chlesea in talks over Kimpenbe transfer</p>
+                <div class="match-desc">
+                  <div class="watch-duration">
+                    <i class="fa-solid fa-clock"></i> 10h
+                  </div>
+                  <div class="comment">
+                    <i class="fa-solid fa-message"></i> 23
+                  </div>
+                </div>
+              </div>
+            </article>
+          </div>
+        </div>
+      </div>
+      <div class="main-btn">
+        <a class="btn" href="">View All</a>
+      </div>
+    </main>
+    <!-- main part end -->
+    <!-- footer part start -->
+    <footer>
+      <div class="container">
+        <h1>Goal</h1>
+        <hr />
+        <nav>
+          <ul>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">Terms of Service</a></li>
+            <li><a href="">Privacy Policy</a></li>
+            <li><a href="">Privacy Settings</a></li>
+            <li><a href="">Goal App</a></li>
+            <li><a href="">Goal Live</a></li>
+          </ul>
+        </nav>
+        <div class="social-icon">
+          <i class="fa-brands fa-facebook-square"></i>
+          <i class="fa-brands fa-instagram-square"></i>
+          <i class="fa-brands fa-linkedin"></i>
+          <i class="fa-brands fa-twitter-square"></i>
+        </div>
+      </div>
+    </footer>
+    <!-- footer part end -->
+  </body>
 </html>
