add link with social icon

--- a/index.html
+++ b/index.html
@@ -165,10 +165,16 @@
           </ul>
         </nav>
         <div class="social-icon">
-          <i class="fa-brands fa-facebook-square"></i>
-          <i class="fa-brands fa-instagram-square"></i>
-          <i class="fa-brands fa-linkedin"></i>
-          <i class="fa-brands fa-twitter-square"></i>
+          <a target="_blank" href="https://web.facebook.com/mfi.tafheem/"
+            ><i class="fa-brands fa-facebook-square"></i
+          ></a>
+          <a target="_blank" href="https://www.instagram.com/mfitafhim/"
+            ><i class="fa-brands fa-instagram-square"></i></a
+          ><a target="_blank" href="https://www.linkedin.com/in/mfi-tafhim/"
+            ><i class="fa-brands fa-linkedin"></i></a
+          ><a target="_blank" href="https://twitter.com/mfi_tafhim"
+            ><i class="fa-brands fa-twitter-square"></i
+          ></a>
         </div>
       </div>
     </footer>
